# auth-avl

./: README.md  auth-avl.cabal
app/: Main.hs
src/Crypto/: AuthDS.hs
src/Crypto/AuthDS/: Proof.hs  Tree.hs  Types.hs
test/: Spec.hs
