name:                auth-avl
version:             0.1
synopsis:            Authenticated AVL
description:         Please see README.md
homepage:            https://github.com/input-output-hk/auth-avl#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent@typed.io
copyright:           2016 IOHK
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.AuthDS
                       Crypto.AuthDS.Tree
                       Crypto.AuthDS.Proof
  other-modules:       Crypto.AuthDS.Types
  build-depends:       base >= 4.7 && < 5
                     , memory
                     , cryptonite
                     , bytestring
  default-language:    Haskell2010

executable auth-avl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auth-avl
                     , memory
                     , bytestring
  default-language:    Haskell2010

test-suite auth-avl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auth-avl
                     , memory
                     , bytestring
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/auth-avl
